federated-services/clusters/west/color-federated-metrics-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: color-federated-route
  namespace: faces
spec:
  parentRefs:
    - group: ""
      kind: Service
      name: color-federated
      namespace: faces
      port: 80
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: color-federated
          namespace: faces
          port: 80
