federated-services/clusters/west/route-to-smiley.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: smiley-route
  namespace: faces
spec:
  parentRefs:
  - group: core
    kind: Service
    name: smiley
    port: 80
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: smiley-smiley
      port: 80
      weight: 1
